--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "FB Ad Generator",
-  "description": "Generate and autofill Facebook Ad texts using ChatGPT.",
-  "version": "1.0",
+  "description": "Generate and copy Facebook Ad texts using ChatGPT.",
+  "version": "1.2",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html",
@@ -11,11 +11,11 @@
   "background": {
     "service_worker": "background.js"
   },
-  "options_page": "options.html",
   "content_scripts": [
     {
       "matches": ["https://www.facebook.com/adsmanager/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ]
 }
