--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "version": "1.2",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
+    "default_popup": "popup.html"
   },
   "background": {
     "service_worker": "background.js"
