--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "__MSG_appDesc__",
   "version": "1.0",
   "default_locale": "de",
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
